cmake_minimum_required(VERSION 3.10)
project(ABfinalProgramacionAplicada)

set(CMAKE_CXX_STANDARD 17)


# Archivos fuente
add_executable (ABfinalProgramacionAplicada "ABfinalProgramacionAplicada.cpp" "ABfinalProgramacionAplicada.h" "Persona.cpp" "Empleado.cpp" "Cliente.cpp" "Cita.cpp" "Quejas.cpp")
